fixed broken css and JS links in main.handelbars, also implemented nodemailer feature

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -105,9 +105,13 @@ footer {
     margin-bottom: 10px;
 }
 
-#profilePosters {
+.profilePosters {
     width: 200px;
     height: auto;
+}
+
+#sendEmailBtn {
+    display: block;
 }
 
 @media(max-width:768px) {
